cd-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cd-testing-deployment
  labels:
    app: ci-testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ci-testing
  template:
    metadata:
      labels:
        app: ci-testing
    spec:
      containers:
      - name: ci-testing
        image: demoburneraccount/ci-testing:1.3
        ports:
        - containerPort: 5000
