cd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cd-test-service
  labels:
    app: ci-testing
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: ci-testing
